--- a/android/build.gradle
+++ b/android/build.gradle
@@ -7,7 +7,7 @@ buildscript {
         compileSdkVersion = Integer.parseInt(findProperty('android.compileSdkVersion') ?: '34')
         targetSdkVersion = Integer.parseInt(findProperty('android.targetSdkVersion') ?: '34')
         kotlinVersion = findProperty('android.kotlinVersion') ?: '1.9.23'
-
+        googlePlayServicesAuthVersion = "19.2.0"
         ndkVersion = "26.1.10909125"
     }
     repositories {
@@ -15,10 +15,15 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.google.gms:google-services:4.3.3'
+        //may neeed to delete this 
+        //classpath 'com.google.gms:google-services:4.3.3'
         classpath('com.android.tools.build:gradle')
         classpath('com.facebook.react:react-native-gradle-plugin')
         classpath('org.jetbrains.kotlin:kotlin-gradle-plugin')
+
+        //added
+         classpath 'com.google.gms:google-services:4.3.15'
+         classpath('com.android.tools.build:gradle:7.3.1')
     }
 }
 
