--- a/package.json
+++ b/package.json
@@ -9,27 +9,35 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@babel/preset-env": "7.24.7",
+    "@babel/preset-react": "7.24.7",
     "@expo/metro-runtime": "~3.2.1",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-firebase/app": "^20.1.0",
     "@react-native-firebase/auth": "^20.1.0",
     "@react-native-google-signin/google-signin": "^12.2.1",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
+    "@react-navigation/stack": "^6.3.29",
     "dotenv": "^16.4.5",
-    "expo": "~51.0.14",
+    "expo": "~51.0.16",
+    "expo-auth-session": "~5.5.2",
     "expo-constants": "~16.0.2",
+    "expo-linking": "~6.3.1",
     "expo-status-bar": "~1.12.1",
-    "expo-updates": "~0.25.17",
+    "expo-updates": "~0.25.18",
     "firebase": "^10.12.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.2",
+    "react-native-google-signin": "^2.1.1",
     "react-native-safe-area-context": "^4.10.1",
-    "react-native-screens": "3.31.1",
+    "react-native-screens": "^3.31.1",
     "react-native-web": "~0.19.10"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "7.24.7",
+    "metro-react-native-babel-preset": "^0.77.0"
   },
   "private": true
 }
